# ml

./: .dev.vars.example  .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.worker.json  vitest.config.ts  wrangler.jsonc
docs/: audio-processing-cloud-runbook.md  audio-processing-invocation.md  audio-processing.md  connectivity-and-online-media.md  data-model.md  editing-rules.md  implementation-plan.md  legacy-file-reconciliation.md  legacy-projects-consolidation.md  logout-and-local-data.md  media-filename-presentation.md  navigation-and-feedback.md  product-plan.md  recording-sharing.md  recording-upload-cleanup.md  recording-upload.md  scan-orientation.md  scan-original-recovery.md  scan-readability.md  search-design.md
migrations/: 0001_initial.sql  0002_editing_foundation.sql  0003_song_writes.sql  0004_audio_derivatives.sql  0005_audio_processing_jobs.sql  0006_recording_upload_sessions.sql  0007_audio_processing_control.sql  (+13 more)
services/audio-converter/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/audio-converter/audio_converter/: __init__.py  batch.py  batch_cli.py  cli.py  hosted_adapter.py  hosted_contract.py  hosted_entrypoint.py  models.py  policy.py  safety.py  service.py  tools.py
services/audio-converter/scripts/: verify_runtime_fixture.py
services/audio-converter/tests/: test_batch.py  test_cli.py  test_container_config.py  test_hosted_adapter.py  test_hosted_contract.py  test_hosted_entrypoint.py  test_policy.py  test_runtime_fixture.py  test_service.py  test_tools.py
(+134 files in other folders)
